<resources>
    <string name="app_name">CosAnMa</string>
    <string name="use_as">Use as</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="login_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="repeat_pass_hint">Repeat Password</string>
    <string name="private_person">Private person</string>
    <string name="private_person_detail">Select this option if you are a private person and just want to buy items or sell your own ones.</string>
    <string name="business">Business</string>
    <string name="business_detail">If you are a vendor or group possessing a shop you should select this option. You will only be able to sell your shop\'s items.</string>
    <string name="ec">EC</string>
    <string name="paypal">PayPal</string>
    <string name="buy">Buy</string>
    <string name="credit_card">Credit Card</string>
    <string name="address_line1">*Address Line 1/Street</string>
    <string name="address_line2">Address Line 2/Street</string>
    <string name="address_line3">Address Line 3/Street</string>
    <string name="state">State/Province/Region</string>
    <string name="city">*City/Town</string>
    <string name="zip">*ZIP/Postal Code</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="agb">AGB</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="later">Later</string>
    <string name="messages">Messages</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="observing">Observing</string>
    <string name="favos">Favorites</string>
    <string name="my_items">My Items</string>
    <string name="new_item">New Item</string>
    <string name="settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string-array name="countries">
        <item>*Select Country</item>
        
        <item>Russia</item>
        <item>Germany</item>
        <item>Turkey</item>
        <item>France</item>
        <item>United Kingdom</item>
        <item>Italy</item>
        <item>Spain</item>
        <item>Ukraine</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Kazakhstan</item>
        <item>Netherlands</item>
        <item>Belgium</item>
        <item>Greece</item>
        <item>Czech Republic</item>
        <item>Portugal</item>
        <item>Sweden</item>
        <item>Hungary</item>
        <item>Azerbaijan</item>
        <item>Belarus</item>
        <item>Austria</item>
        <item>Switzerland</item>
        <item>Bulgaria</item>
        <item>Serbia</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>Slovakia</item>
        <item>Norway</item>
        <item>Ireland</item>
        <item>Croatia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Georgia</item>
        <item>Moldova</item>
        <item>Armenia</item>
        <item>Lithuania</item>
        <item>Albania</item>
        <item>Macedonia</item>
        <item>Slovenia</item>
        <item>Latvia</item>
        <item>Estonia</item>
        <item>Cyprus</item>
        <item>Montenegro</item>
        <item>Luxembourg</item>
        <item>Malta</item>
        <item>Iceland</item>
        
        <item>United States of America</item>
        <item>Mexico</item>
        <item>Canada</item>
        <item>Guatemala</item>
        <item>Cuba</item>
        <item>Haiti</item>
        <item>Dominican Republic</item>
        <item>Honduras</item>
        <item>Nicaragua</item>
        <item>El Salvador</item>
        <item>Costa Rica</item>
        <item>Panama</item>
        <item>Puerto Rico</item>
        <item>Jamaica</item>
        <item>Trinidad and Tobago</item>
        <item>Guadeloupe</item>
        <item>Martinique</item>
        <item>Bahamas</item>
        <item>Belize</item>
        <item>Barbados</item>
        
        <item>Egypt</item>
        <item>Iran</item>
        
        <item>Iraq</item>
        <item>Saudi Arabia</item>
        <item>Yemen</item>
        <item>Syria</item>
        <item>United Arab Emirates</item>
        <item>Israel</item>
        <item>Jordan</item>
        <item>Palestine</item>
        <item>Lebanon</item>
        <item>Oman</item>
        <item>Kuwait</item>
        <item>Qatar</item>
        <item>Bahrain</item>
        
        <item>Brazil</item>
        <item>Colombia</item>
        <item>Argentina</item>
        <item>Peru</item>
        <item>Venezuela</item>
        <item>Chile</item>
        <item>Ecuador</item>
        <item>Bolivia</item>
        <item>Paraguay</item>
        <item>Uruguay</item>
        <item>Guyana</item>
        <item>Suriname</item>
        <item>French Guiana</item>
    </string-array>
    <string-array name="currency">
        <item>&#8364;</item>
        <item>&#36;</item>
        <item>&#163;</item>
    </string-array>
    <string-array name="categories">
        <item>Accessories</item>
        <item>Anime</item>
        <item>Cosplay</item>
        <item>Figma</item>
        <item>Manga</item>
        <item>Wig</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="shop_picture">Shop picture / logo</string>
    <string name="shop_name">Name of business</string>
    <string name="shop_description">Short description of your business and your products</string>
</resources>