<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tab_shop"
            android:icon="@drawable/ic_shop_small_white"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_tab_profile"
            android:icon="@drawable/ic_profile_small"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_message_small"
                android:title="@string/messages" />
            <item
                android:id="@+id/nav_my_items"
                android:icon="@drawable/ic_items2_small"
                android:title="@string/my_items" />
            <item
                android:id="@+id/nav_observing"
                android:icon="@drawable/ic_favos_small"
                android:title="@string/favos" />
        </menu>
    </item>

    <item android:title="@string/shop">
        <menu>
            <item
                android:id="@+id/nav_recently_viewed"
                android:icon="@drawable/ic_recently_small"
                android:title="@string/recently_viewed" />
            <item
                android:id="@+id/nav_new_item"
                android:icon="@drawable/ic_add_item_small"
                android:title="@string/new_item" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_small"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
