<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/agbButton">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <net.couchdev.android.layoutsandbox.view.CheckableEditText
                style="@style/edit_text_style"
                android:id="@+id/addressLine1Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastNameEdit"
                android:layout_marginTop="16dp"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/address_line1"/>

            <EditText
                style="@style/edit_text_style"
                android:id="@+id/addressLine2Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressLine1Edit"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/address_line2"/>

            <EditText
                style="@style/edit_text_style"
                android:id="@+id/addressLine3Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressLine2Edit"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/address_line3"/>

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressLine3Edit"
                android:layout_marginTop="16dp"
                android:entries="@array/countries"/>

            <EditText
                style="@style/edit_text_style"
                android:id="@+id/stateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countrySpinner"
                android:layout_marginTop="16dp"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/state"/>

            <net.couchdev.android.layoutsandbox.view.CheckableEditText
                style="@style/edit_text_style"
                android:id="@+id/cityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stateEdit"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/city"/>

            <net.couchdev.android.layoutsandbox.view.CheckableEditText
                style="@style/edit_text_style"
                android:id="@+id/zipEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityEdit"
                android:layout_marginTop="8dp"
                android:imeOptions="actionDone"
                android:inputType="number|textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/zip"/>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:background="@drawable/button_selector"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:background="@drawable/button_selector"/>

    <CheckBox
        android:id="@+id/acceptCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/accept"
        android:layout_above="@+id/nextButton"/>
    <Button
        android:id="@+id/agbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acceptCheck"
        android:layout_toRightOf="@+id/acceptCheck"
        android:layout_marginLeft="16dp"
        android:text="@string/agb"
        android:background="@drawable/secondary_button_selector"/>

</RelativeLayout>