<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/market">

    <net.couchdev.android.layoutsandbox.view.CheckableEditText
        style="@style/edit_text_style"
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:maxLength="16"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/username_hint"/>

    <net.couchdev.android.layoutsandbox.view.CheckableEditText
        style="@style/edit_text_style"
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/usernameEdit"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"/>

    <net.couchdev.android.layoutsandbox.view.CheckableEditText
        style="@style/edit_text_style"
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:layout_below="@+id/emailEdit"
        android:hint="@string/password_hint"
        android:imeOptions="actionNext"/>

    <net.couchdev.android.layoutsandbox.view.CheckableEditText
        style="@style/edit_text_style"
        android:id="@+id/repeatPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordEdit"
        android:hint="@string/repeat_pass_hint"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/repeatPasswordEdit"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        android:background="@drawable/button_selector"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registerButton"
        android:layout_alignParentLeft="true"
        android:text="@string/back"
        android:background="@drawable/button_selector2"/>

</RelativeLayout>