<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/acceptButton"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/agbText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/large_text"/>
    </ScrollView>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/accept"
        android:background="@drawable/button_selector"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acceptButton"
        android:layout_toLeftOf="@+id/acceptButton"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/back"
        android:background="@drawable/secondary_button_selector"/>

</RelativeLayout>