<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/item_image_bg"
        android:src="@drawable/app_icon_grey"
        android:padding="4dp"/>
    <ImageView
        android:id="@+id/editImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/profileImage"
        android:layout_alignBottom="@+id/profileImage"
        android:background="@drawable/edit_image_bg"
        android:padding="3dp"
        android:src="@drawable/ic_edit_small_white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImage"
        android:layout_alignLeft="@+id/profileImage"
        android:text="@string/shop_picture"/>

    <EditText
        style="@style/edit_text_style_check"
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImage"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/shop_name"/>

    <EditText
        style="@style/edit_text_style_check"
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/nameEdit"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:maxLines="5"
        android:textSize="16sp"
        android:gravity="top"
        android:hint="@string/shop_description"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/next"
        android:background="@drawable/button_selector"/>

</RelativeLayout>